--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
     "eslint": "^8.3.0",
     "nodemon": "^2.0.15"
   },
+  "engines": {
+    "node": "16.x",
+    "yarn": "1.x"
+  },
+  "type": "module",
   "private": true
 }
