--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "devDependencies": {
     "@shcherbin/eslint-config": "^0.2.0",
     "eslint": "^8.3.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "webpack": "^5.64.3",
+    "webpack-cli": "^4.9.1"
   },
   "engines": {
     "node": "16.x",
