--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "simple-crud-api",
   "scripts": {
+    "build": "webpack",
     "dev": "nodemon -w src",
     "lint": "eslint src",
-    "start": "node --experimental-specifier-resolution node src"
+    "start": "node --experimental-specifier-resolution node -r dotenv/config src",
+    "start:prod": "yarn build && node --experimental-specifier-resolution node -r dotenv/config dist/server"
   },
   "dependencies": {
     "dotenv": "^10.0.0"
