--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
   "scripts": {
     "build": "webpack",
     "dev": "nodemon -w src",
-    "lint": "eslint src",
+    "lint": "eslint src tests",
     "start": "node --experimental-specifier-resolution node -r dotenv/config src",
-    "start:prod": "yarn build && node --experimental-specifier-resolution node -r dotenv/config dist/server"
+    "start:prod": "yarn build && node --experimental-specifier-resolution node -r dotenv/config dist/server",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:coverage": "yarn test --coverage"
   },
   "dependencies": {
     "dotenv": "^10.0.0"
   },
   "devDependencies": {
     "@shcherbin/eslint-config": "^0.2.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.3.0",
+    "jest": "^27.3.1",
     "nodemon": "^2.0.15",
+    "supertest": "^6.1.6",
     "webpack": "^5.64.3",
     "webpack-cli": "^4.9.1"
   },
